<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.singlescreenapp.MainActivity"
        xmlns:tools="http://schemas.android.com/tools">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/GreyLight"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/relativeH">

                    <LinearLayout
                        android:background="@drawable/gradientbackground"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linearH"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_marginTop="@dimen/circleT"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="@dimen/circleTh"
                            android:layout_height="@dimen/circleW"
                            android:src="@drawable/netokracija_logo"/>
                        <TextView
                            android:layout_marginTop="@dimen/textNt"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/text"
                            android:textStyle="bold"
                            android:textSize="@dimen/textS"/>
                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="@dimen/cardW"
                        android:layout_height="@dimen/cardH"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/cardmT"
                        android:elevation="@dimen/cardE"
                        android:background="@drawable/myrect">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="3">
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/clients"
                                    android:textSize="@dimen/textSize"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/clientsn"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/textSize"
                                    android:paddingTop="@dimen/paddingT"
                                    android:textColor="@color/buttonblue"/>

                            </LinearLayout>

                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/projects"
                                    android:textSize="@dimen/textSize"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/projectsn"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/textSize"
                                    android:paddingTop="@dimen/paddingT"
                                    android:textColor="@color/buttonblue"/>

                            </LinearLayout>

                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Employees"
                                    android:textSize="@dimen/textSize"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/employeesn"
                                    android:textStyle="bold"
                                    android:textSize="@dimen/textSize"
                                    android:paddingTop="@dimen/paddingT"
                                    android:textColor="@color/buttonblue"/>

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="@dimen/infoW"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/infoT">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/infopL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/imageW"
                            android:layout_height="@dimen/imageH"
                            android:src="@drawable/ic_email_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/imagepL"
                            android:text="@string/mail"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/infopL"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/infopL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/imageW"
                            android:layout_height="@dimen/imageH"
                            android:src="@drawable/ic_phone_android_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/imagepL"
                            android:text="@string/number"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/infoTi"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/infopL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="@dimen/imageW"
                            android:layout_height="@dimen/imageH"
                            android:src="@drawable/ic_group_add_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/imagepL"
                            android:text="@string/add"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/infoTi"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/infopL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/imageW"
                            android:layout_height="@dimen/imageH"
                            android:src="@drawable/ic_forum_black_24dp"/>
                        <TextView
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="20dp"
                            android:text="@string/show"/>
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:textColor="@color/text"
                    android:background="@drawable/buttonstyle"
                    android:layout_marginTop="@dimen/buttonmT"
                    android:layout_marginBottom="@dimen/buttonmB"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button"/>

            </LinearLayout>
    </ScrollView>
